results/SVCOMP/conversational/log-boundcheck200-2024_03_08_23_31_28.txt
public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    //@ maintaining i >= 0;
    //@ decreases i;
    if (i == 0) {
      return;
    }
    if (i > 0) {
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:5: error: Loop specifications must immediately precede a loop statement
    //@ maintaining i >= 0;
        ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    //@ maintaining i >= 0;
    //@ decreases i;
    if (i == 0) {
      return;
    }
    if (i > 0) {
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:5: error: Loop specifications must immediately precede a loop statement
    //@ maintaining i >= 0;
        ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

public class boundcheck200 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    if (i == 0) {
      return;
    }
    if (i > 0) {
      //@ maintaining i >= 0;
      //@ decreases i;
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck200.java:9: error: Loop specifications must immediately precede a loop statement
      //@ maintaining i >= 0;
          ^
1 error

